frontend/tests/cases/positive/interface-simple-19.gr
data A a = A

data B = B

interface Simple a where
  simple : a -> a

instance Simple (A B) where
  simple x = x
